--- a/src/main/resources/templates/affectation/affectations-groupees/frm-affectations-groupees.html
+++ b/src/main/resources/templates/affectation/affectations-groupees/frm-affectations-groupees.html
@@ -71,7 +71,12 @@
        	<script type="text/javascript">
         	$(document).ready(function() 
     	    {
-    	    	$('#tbl-agents-affectables').DataTable();
+    	    	$('#tbl-agents-affectables').DataTable
+    	    	({
+    	    		"scrollY":"300px",
+				    "scrollCollapse":true,
+				    "paging":false
+        	    });
     	    });
     	    
 			function formatDropDownBoxToSelect2(idDropDown)
