--- a/src/main/resources/templates/agent/frm/infos-emploi-frag.html
+++ b/src/main/resources/templates/agent/frm/infos-emploi-frag.html
@@ -13,7 +13,7 @@
 
                 <div class="col col-lg-4">
                     <div class="form-group">
-                        <label for="fonction">Fonction</label>
+                        <label for="fonction">Fonction</label><br/>
                         <span class="error-msg text-danger" id="fonction-error-msg"></span>
                         <select name="nomFonction" id="fonction" class="form-control" required="required" th:field="*{fonction.idFonction}">
                                 <option value="" ></option>
@@ -25,7 +25,7 @@
 
                 <div class="col col-lg-4">
                     <div class="form-group">
-                        <label for="emploi">Emploi</label>
+                        <label for="emploi">Emploi</label><br/>
                         <span class="error-msg text-danger" id="emploi-error-msg"></span>
 
                         <select name="nomEmploi" id="emploi" class="form-control" required="required"  th:field="*{emploi.idEmploi}">                    
@@ -53,7 +53,7 @@
                 
                 <div class="col col-lg-4">
                     <div class="form-group">
-                        <label for="grade">Grade</label>
+                        <label for="grade">Grade</label><br/>
                         <span class="error-msg text-danger" id="grade-error-msg"></span>
                         <select name="nomGrade" id="grade" class="form-control" required="required" th:field="*{grade.idGrade}">
                                 <option value="0"></option>
