--- a/src/main/resources/templates/agent/frm/infos-generales-frag.html
+++ b/src/main/resources/templates/agent/frm/infos-generales-frag.html
@@ -59,7 +59,7 @@
                     
                     <div class="col col-lg-2">
                     	<div class="form-group">
-                    		<label for="lieuNaissance" class="control-label">Localité de naissance</label>
+                    		<label for="lieuNaissance" class="control-label">Localité</label>
                     		<input class="form-control" type="text" id="lieuNaissance" th:field="*{lieuNaissance}"/>
                     	</div>
                     </div>
