--- a/src/main/resources/templates/exceptions/access-denied.html
+++ b/src/main/resources/templates/exceptions/access-denied.html
@@ -42,14 +42,12 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             
-            <div class="alert">
+            <div class="alert alert-danger">
               <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-              <strong>Problème de droits d'accès!</strong> 
-              <h3 th:text="${exceptionHandler}"></h3>
+              <strong>Problèmes de droits d'accès!</strong> 
             </div>
           </div>
         </div>
-        <h5 class="mt">Hey, maybe you will be interested in these pages:</h5>
       </div>
     </div>
   </div>
