--- a/src/main/resources/templates/user/summary-card-frag.html
+++ b/src/main/resources/templates/user/summary-card-frag.html
@@ -48,7 +48,7 @@
 					</div>
 				</div> 
 				
-				<div class="col-md-12" style="align-content: center; align-items: center; text-align: center;">
+				<div sec:authorize="hasAuthority('Enregistrer le personnel')" class="col-md-12" style="align-content: center; align-items: center; text-align: center;">
 					<p>
 						<a th:href="@{'/staffadmin/frm-agent?idAgent=' + ${visitedUser.agent.idAgent}}" class="btn btn-theme" ><i class="fa fa-edit"></i> Modifier</a>
 						<a th:href="@{'/staffadmin/affectations/'+${visitedUser.agent.idAgent}}" class="btn btn-theme"><i class="glyphicon glyphicon-send"></i> Affecter</a>
