--- a/src/main/resources/templates/administration/list-users/list-users-frag.html
+++ b/src/main/resources/templates/administration/list-users/list-users-frag.html
@@ -28,7 +28,7 @@
 								<td style="vertical-align: middle;" th:text="${user.agent.prenom}"></td>
 								<td style="vertical-align: middle;" th:text="${user.username}"></td>
 								<td style="vertical-align: middle;" th:text="${user.idUaChampVisuel==null ? '' : user.uaChampVisuel}"></td>
-								<td style="vertical-align: middle;" ><span th:each="role, stat:${user.roles}" th:text="${stat.last ? role.role : role.role + ','}"></span></td>
+								<td style="vertical-align: middle;" ><span th:each="role, stat:${user.roles}" th:text="${stat.last ? role.roleName : role.roleName + ','}"></span></td>
 
 								<td style="text-align: center; vertical-align: middle;">
 									<p class="centered"><a href="profile.html"><img th:src="@{'/staffadmin/photo-agent/'+${user.agent.idAgent}}" class="img-circle" width="40" height="40"></a></p>
@@ -36,7 +36,7 @@
 								
 								<td style="vertical-align: middle;"> 
 																	
-									<div class="btn-group">
+									<div class="btn-group" sec:authorize="hasAuthority('Gérer les utilisateurs')">
 										<button type="button" class="btn btn-theme dropdown-toggle"
 											data-toggle="dropdown">
 											Actions <span class="caret"></span>
