--- a/src/main/resources/templates/affectation/affectations-groupees/frm-affectations-groupees-frag.html
+++ b/src/main/resources/templates/affectation/affectations-groupees/frm-affectations-groupees-frag.html
@@ -29,16 +29,16 @@
 									
 									<select required="required" th:field="*{uaArrivee.idUniteAdmin}" id="uniteAdminDeDestination" class="form-control">
 										<option value="">Choisir</option>
-										<option th:each="ua:${affectationGroupeeForm.possibleDestinations}" th:value="${ua.idUniteAdmin}" th:text="${ua}"></option>
+										<option th:select="${uaArrivee==null? 'false' : ua.idUniteAdmin==uaArrivee.idUniteAdmin}" th:each="ua:${affectationGroupeeForm.possibleDestinations}" th:value="${ua.idUniteAdmin}" th:text="${ua}"></option>
 									</select>
 								</div> 
 							</div>
 
-							<div style="margin-bottom: 20px;" class="col-md-8" th:if="${affectationGroupeeForm.possibleDestinations==null}">
+							<!--<div style="margin-bottom: 20px;" class="col-md-8" th:if="${affectationGroupeeForm.possibleDestinations==null}">
 								<label for="uniteAdminDeDestination" class="control-label">Service de destination</label>
 								<input type="text" disabled="disabled"  class="form-control"  th:value="${affectationGroupeeForm.uaArrivee.toString()}" />
 								<input type="hidden" th:field="*{uaArrivee.idUniteAdmin}">
-							</div>
+							</div>-->
 
 							<div class="col-md-4">
 								<div class="form-group">
@@ -55,7 +55,7 @@
 					</div>
 					<div class="panel-body panel-collapse collapse in" id="agents-affectables">
 									
-						<table id="tbl-agents-affectables" class="table table-striped" style="margin-bottom: 20px; border-bottom: 2px;">
+						<table id="tbl-agents-affectables" class="table-hover table table-striped" style="margin-bottom: 20px; border-bottom: 2px;">
 							<thead>
 								<tr>
 									<th>Nom</th>
