--- a/src/main/resources/templates/fragments/layout/layout.html
+++ b/src/main/resources/templates/fragments/layout/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" xmlns:th="http://www.thymeleaf.org" 
-                xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+                xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+                xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     
     
 	<head>
