--- a/src/main/resources/templates/fragments/layout/side-bar-frag.html
+++ b/src/main/resources/templates/fragments/layout/side-bar-frag.html
@@ -40,7 +40,7 @@
 	                    	<a th:href="@{/staffadmin/frm-agent}">Nouvel agent</a>
 	                  	</li>
 	                  	<li><a th:href="@{/staffadmin/frm-affectations-groupees/0}">Mouvements internes</a></li>
-	                  	<li><a>Départs</a></li>
+	                  	<li><a th:href="@{/staffadmin/departs}">Sorties</a></li>
 	                </ul>
 	              </li>
 	              
