--- a/src/main/resources/templates/user/profil.html
+++ b/src/main/resources/templates/user/profil.html
@@ -5,6 +5,7 @@
     
 	<head>		
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="/staffadmin/css/timeline.css"/>
 		<style>
 			ul li span .agent-property
 			{
@@ -28,6 +29,7 @@
 			<th:block th:replace="user/infos-professionnelles-frag.html::infos-professionnelles-frag"></th:block>
 			<th:block th:replace="user/situation-conges-frag.html::situation-conges-frag"></th:block>
 			<th:block th:replace="user/docs-admins-frag.html::docs-admins-frag"></th:block>
+			<th:block th:replace="user/historique/historique-agent.html::historique-agent"></th:block>
 <!-- 		<th:block th:replace="user/change-password-modal-frag.html::change-password-modal-frag"></th:block> -->
             <!-- <button class="btn btn-success mr-3" id="btn-modal-trigger" type="button" data-toggle="modal" href="#change-password-modal">Valider</button> -->
 
