--- a/src/main/resources/templates/annuaire/annuaire.html
+++ b/src/main/resources/templates/annuaire/annuaire.html
@@ -33,7 +33,7 @@
 	<body>
         <div layout:fragment="content">
             <div class="container-fluid">
-                <th:block th:replace="annuaire/annuaire-frag.html::annuaire-frag"></th:block>
+                <th:block th:replace="list-departs/annuaire-frag.html::annuaire-frag"></th:block>
             </div>
         </div>
 
